# kenny

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
kenny/: __init__.py  base_api_client.py
tests/: test_base_api_client.py  test_example.py  test_locally_only.py
tests/test_example/: test_hello.py
