[metadata]
name = kenny
version = 0.0.2
author = Ryan Ozelie
author_email = ryan.ozelie@gmail.com
url = https://github.com/rozelie/kenny
description = kenny provides feature-rich clients to HTTP(s) APIs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = requests, api, client, http, https
license = MIT License
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    requests>=2.27.*

[options.extras_require]
dev =
    black==22.12.0
    coverage-badge==1.1.0
    mypy==0.991
    ruff==0.0.228
    pytest==7.2.1
    pytest-cov==4.0.0
    pytest-mock==3.10.0
    requests-mock==1.10.0
    types-requests==2.28.11.8

[options.package_data]
* = README.md